fixed pre { width:100% }, overflow

--- a/CSS/GitHub-ReadMe.css
+++ b/CSS/GitHub-ReadMe.css
@@ -118,6 +118,6 @@ span.float-right > span{ display:block; margin:13px auto 0px; overflow:hidden; t
 code, tt{ background-color:#F8F8F8; border-radius:3px 3px 3px 3px; border:1px solid #DDDDDD; margin:0px 2px; padding:0px 5px; }
 code{ white-space:nowrap; }
 pre > code{ background:none repeat scroll 0% 0% transparent; border:medium none; margin:0px; padding:0px; white-space:pre; }
-pre, pre{ width:100%;background-color:#F8F8F8; border-radius:3px 3px 3px 3px; border:1px solid #DDDDDD; font-size:13px; line-height:19px; overflow:auto; padding:6px 10px; }
+pre, pre{ width:auto;background-color:#F8F8F8; border-radius:3px 3px 3px 3px; border:1px solid #DDDDDD; font-size:13px; line-height:19px; overflow:auto; padding:6px 10px; }
 pre code, pre tt{ background-color:transparent; border:medium none; margin:0px; padding:0px; }
 code, pre{ font-family:Consolas, "Liberation Mono", Courier, monospace; font-size:12px; }
